Fix: fixed perms check bug in templates and views

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1693,6 +1693,10 @@ body {
 	font-family: $montserrat-bold-font;
 }
 
+.news-comments__username_light-colored {
+	color: $primary-color-light-blue;
+}
+
 .news-comments__message {
 	padding-left: 7px;
 	font-size: 16px;
