--- a/delivery/templates/delivery/header-index.html
+++ b/delivery/templates/delivery/header-index.html
@@ -1,10 +1,11 @@
 {% load static %}
+{% load custom_template_tags %}
 
 {% block sidebar %}
-<header id="header" class="header header_news">
+<header id="header" class="header">
     <div class="logo">
         <img src="{% static 'images/logo.png' %}" alt="Logo">
-        <div class="logo__title">News</div>
+        <div class="logo__title">Cargo</div>
         <div class="logo__company-name">kallyas</div>
     </div>
     <div class="trigram" id="trigram">
@@ -29,6 +30,11 @@
     </nav>
     <nav class="nav">
         <ul class="nav__menu">
+            {% if user.is_authenticated %}
+            {% if request.user|has_group:'news_moderators' or request.user|has_group:'news_admins' %}
+            <li class="nav__item"><a href="{% url 'control' %}" class="nav__link">control</a></li>
+            {% endif %}
+            {% endif %}
             <li class="nav__item"><a href="{% url 'index' %}" class="nav__link">home</a></li>
             <li class="nav__item"><a href="#" class="nav__link">company</a></li>
             <li class="nav__item"><a href="{% url 'vehisles' %}" class="nav__link">vehisles</a></li>
