--- a/delivery/templates/delivery/index.html
+++ b/delivery/templates/delivery/index.html
@@ -4,6 +4,10 @@
 
 {% block title %}<title>Home</title>{% endblock %}
 
+{% block sidebar %}
+{% include 'delivery/header-index.html' %}
+{% endblock %}
+
 {% block content %}
 <div id="slider" class="slider">
     <div id="slider__button" class="slider__button">
