--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,8 @@
 {% extends "delivery/base-generation.html" %}
 {% load static %}
 
+{% block title %}<title>Login</title>{% endblock %}
+
 {% block content %}
 <div class="login">
     {% if form.errors %}
